--- a/index.html
+++ b/index.html
@@ -2,18 +2,9 @@
 <html>
     <head>
         <title>Yousup Village</title>
-        <link rel="stylesheet" href="YousupVillage.css">
     </head>
 
     <body>
-        <div class="Nav_Bar">
-            <img src="Images/Profile Pic Transparent 800x800.png" class="Logo">
-            <ul>
-                <li><a href="YousupVillage.html">Home</a></li>
-                <li><a href="YousupVillage.html">History</a></li>
-                <li><a href="YousupVillage.html">The Founder</a></li>
-            </ul>
-        </div>
-        <h1 class="Yousup_Village">Yousup Village</h1>
+        <div><img src="Images/Profile Pic Transparent 800x800.png">
     </body>
 </html>
