--- a/index.html
+++ b/index.html
@@ -1,10 +1,21 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link rel="stylesheet" href="styles.css">
         <title>Yousup Village</title>
     </head>
 
     <body>
-        <div><img src="Images/Profile Pic Transparent 800x800.png">
+        <div>
+            <header class="header">
+                <a href="/" class="logo"><img src="Images/Profile Pic Transparent 800x800.png" class="logo"></a>
+
+                <nav class="navbar">
+                    <a href="/">Home</a>
+                    <a href="anime.html">Anime</a>
+                </nav>
+
+            </header>
+        </div>
     </body>
 </html>
