--- a/index.html
+++ b/index.html
@@ -9,12 +9,10 @@
         <div>
             <header class="header">
                 <a href="/" class="logo"><img src="Images/Profile Pic Transparent 800x800.png" class="logo"></a>
-
                 <nav class="navbar">
-                    <a href="/">Home</a>
-                    <a href="anime.html">Anime</a>
+                    <a href="/" class="home">Home</a>
+                    <a href="anime.html" class="anime">Anime</a>
                 </nav>
-
             </header>
         </div>
     </body>
