--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <link rel="stylesheet" href="styles.css">
+        <link rel="icon" type="image/x-icon" href="Images/Profile Pic Transparent 800x800.png">
         <title>Yousup Village</title>
     </head>
 
