--- a/index.html
+++ b/index.html
@@ -3,18 +3,29 @@
     <head>
         <link rel="stylesheet" href="styles.css">
         <link rel="icon" type="image/x-icon" href="Images/Profile Pic Transparent 800x800.png">
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Yousup Village</title>
     </head>
 
     <body>
-        <div>
-            <header class="header">
-                <a href="/" class="logo"><img src="Images/Profile Pic Transparent 800x800.png" class="logo"></a>
-                <nav class="navbar">
-                    <a href="/" class="home">Home</a>
-                    <a href="anime.html" class="anime">Anime</a>
-                </nav>
-            </header>
-        </div>
+        <nav class="navbar">
+            <div>
+                <a href="\">
+                    <img class="navlogo" src="Images/Profile Pic Transparent 800x800 logo.png" alt="logo">
+                </a>
+            </div>
+            <ul class="nav-list">
+                <li class="list-item">
+                    <a href="\">Home</a>
+                </li>
+                <li class="list-item">
+                    <a href="anime.html">Anime</a>
+                </li>
+                <li class="list-item">
+                    <a href="\">Other link</a>
+                </li>
+            </ul>
+        </nav>
     </body>
 </html>
